2018-12-06         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Add -ggdb3 to CFLAGS if developing and remove
	-O2 from Makefile, extension/Makefile, and support/Makefile.
	* config.guess, config.sub: Updated from GNULIB.

2018-11-25         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Updated from GNULIB.

2018-11-24         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (arg_assign): Allow assigning strongly typed regexp
	constants to variables on the command line and with -v.
	Thanks to Peng Yu <pengyu.ut@gmail.com> for the report.

2018-11-17         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.c, command.c: Updated to Bison 3.2.1.
	* NEWS: Updated.
	* Makefile.am (pc/Makefile.tst): Make it work for out-of-tree
	builds.  Thanks to `make distcheck' for the report.

2018-11-17         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess: Updated from GNULIB.

2018-11-11         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (usage): Improve output for -Z in the help.

2018-10-24         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (usage): Improve output for -Y and add -Z in the help.

2018-10-23         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Updated from GNULIB.

2018-10-10         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (print_instruction): For Op_comment, use print_func
	instead of fprintf to print the comment type.

2018-10-01         Nelson H.F. Beebe     <beebe@math.utah.edu>

	* custom.h (__builtin_expect): Define for non-GNU compilers.

2018-09-27         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* mpfr.c (force_mpnum): Check that base is 10 also before
	computing MPG integer.  Found based on bug report from
	Luu Vinh Phuc <phuclv90@gmail.com>.

2018-09-26         Arnold D. Robbins     <arnold@skeeve.com>

	Add more lint checks.

	* awk.h (POP_ARRAY): Add boolean parameter to check for untyped
	value and include lint warning.