@@ -91,6 +91,10 @@
 #include "missing_d/mktime.c"
 #endif /* HAVE_MKTIME */
 
+#ifndef HAVE_TIMEGM
+#include "missing_d/timegm.c"
+#endif /* HAVE_TIMEGM */
+
 #ifndef HAVE_SNPRINTF
 #include "missing_d/snprintf.c"
 #endif
