@@ -1,3 +1,7 @@
+2018-12-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* timegm.c: New file implementing timegm.
+
 2018-10-03         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* intprops.h, verify.h: Removed. The copy in ../support is
